# atmos-validation

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  data.json  pyproject.toml
.github/workflows/: ci-check-pr.yml  ci-conventional-commit-linter.yml  ci-cov-comment.yml  ci-doctest.yml  ci-lint-pr.yml  ci-test-pr.yml  ci-trufflehog-scan.yml  pypi-publisher.yml  release-please.yml
atmos_validation/: __main__.py
atmos_validation/convert_ascii/: attrs_to_meta.py  df_to_nc.py  main.py  measurement_metadata_to_schema.json  parsers.py  utils.py
atmos_validation/schemas/: __init__.py  classification_level.py  data_usability_level.py  data_usability_levels.py  dim_constants.py  installation_type.py  installation_types.py  instrument_type.py  instrument_types.py  metadata.py  parameter_config.py  parameter_configs.py  qc_tests.py  world_port_index.py
atmos_validation/schemas/tests/: test_classification_level.py  test_parameter_configs.py  test_unique_configs.py
atmos_validation/validate_ascii/: date_helper.py  header_date.py  header_metadata.py  header_names.py  header_parameter_info.py  header_parameter_info_list.py  header_parser.py  header_position.py  main.py  result_file.py  row_parser.py  utils.py  validate_result.py
atmos_validation/validate_netcdf/: main.py  utils.py  validation_logger.py  validation_settings.py
atmos_validation/validate_netcdf/tests/: test_blacklisted_globals.py  test_data_usability_validation.py  test_dimvars_validator.py  test_file_attributes.py  test_final_reports_validation.py  test_height_depth_validation.py  (+10 more)
docs/: ascii_format.md  conventions.md  run.md
examples/: example_netcdf_measurement.nc
examples/hindcast_example/: example_hindcast_20160101_20160131_T744.nc  example_hindcast_20160201_20160229_T696.nc  example_hindcast_20160301_20160331_T744.nc
htmlcov/: class_index.html  d_144d22a479e768cb_dims_validator_py.html  d_144d22a479e768cb_dimvars_validator_py.html  d_144d22a479e768cb_spatial_validators_py.html  d_144d22a479e768cb_time_validator_py.html  d_1e1afd6ba6b2c480___init___py.html  d_1e1afd6ba6b2c480_main_py.html  d_1e1afd6ba6b2c480_utils_py.html  d_1e1afd6ba6b2c480_validation_logger_py.html  d_1e1afd6ba6b2c480_validation_settings_py.html  d_5cc6cc870cd4ce7e___init___py.html  d_5cc6cc870cd4ce7e_classification_level_py.html  d_5cc6cc870cd4ce7e_data_usability_level_py.html  d_5cc6cc870cd4ce7e_data_usability_levels_py.html  d_5cc6cc870cd4ce7e_dim_constants_py.html  d_5cc6cc870cd4ce7e_installation_type_py.html  d_5cc6cc870cd4ce7e_installation_types_py.html  d_5cc6cc870cd4ce7e_instrument_type_py.html  d_5cc6cc870cd4ce7e_instrument_types_py.html  d_5cc6cc870cd4ce7e_metadata_py.html  d_5cc6cc870cd4ce7e_parameter_config_py.html  d_5cc6cc870cd4ce7e_parameter_configs_py.html  d_6108b4c3196ad680_test_classification_level_py.html  d_6108b4c3196ad680_test_parameter_configs_py.html  d_6108b4c3196ad680_test_unique_configs_py.html  d_814165303785b402_test_blacklisted_globals_py.html  d_814165303785b402_test_data_usability_validation_py.html  d_814165303785b402_test_dimvars_validator_py.html  d_814165303785b402_test_file_attributes_py.html  d_814165303785b402_test_final_reports_validation_py.html  d_814165303785b402_test_height_depth_validation_py.html  d_814165303785b402_test_height_longname_validator_py.html  d_814165303785b402_test_installation_types_validation_py.html  d_814165303785b402_test_lat_lon_validator_py.html  d_814165303785b402_test_main_py.html  d_814165303785b402_test_sig_digs_py.html  d_814165303785b402_test_spatial_validators_py.html  d_814165303785b402_test_time_validator_py.html  d_814165303785b402_test_util_py.html  d_814165303785b402_test_varattrs_validation_py.html  (+60 more)
(+11 files in other folders)
