[tool.poetry]
name = "atmos_validation"
version = "1.8.0"
description = "A python library containing automated data validation tools for the Atmos Data Service"
authors = ["Team Atmos (Equinor)"]
readme = ["README.md", "docs/conventions.md", "docs/ascii_format.md", "docs/run.md"]
repository = "https://github.com/equinor/atmos-validation"
documentation = "https://github.com/equinor/atmos-validation/tree/main/docs"
license = "MIT"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/equinor/atmos-validation/issues"
"Changelog" = "https://github.com/equinor/atmos-validation/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "^2.8.2"
numpy = "^1.23.3"
xarray = "^2022.9.0"
dask = "^2022.11.1"
h5py = "^3.6.0"
h5netcdf = "^1.1.0"
requests = "^2.31.0"
netcdf4 = "^1.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pyright = "^1.1.291"
coverage = "^7.1.0"
setuptools = "^69.0.3"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true

[tool.ruff]
lint.extend-select = ["I"]
lint.ignore = [
  "F403", # allows * imports
]
