[project]
name = "atmos_validation"
version = "2.0.2"
description = "A python library containing automated data validation tools for the Atmos Data Service"
authors = [{ name = "Team Atmos (Equinor)" }]
requires-python = ">=3.10, <3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.8.2,<3",
    "numpy>=2.0.0,<3",
    "xarray>=2025.0.0,<2026",
    "dask>=2025.7.0,<2026",
    "h5py>=3.10.0,<4",
    "h5netcdf>=1.6.4,<2",
    "requests>=2.32.5,<3",
]

[project.urls]
Repository = "https://github.com/equinor/atmos-validation"
Documentation = "https://github.com/equinor/atmos-validation/tree/main/docs"
"Bug Reports" = "https://github.com/equinor/atmos-validation/issues"
Changelog = "https://github.com/equinor/atmos-validation/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.1.3,<8",
    "pyright>=1.1.291,<2",
    "coverage>=7.1.0,<8",
    "setuptools>=69.0.3,<70",
    "ruff>=0.5.1,<0.6",
    "pre-commit>=4.2.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
relative_files = true

[tool.ruff]
lint.extend-select = ["I", "NPY201"]
lint.ignore = [
  "F403", # allows * imports
]
